Fix apispec.yml,refactoring user for create,refactoring review,add imageEnv to .env and use it
