# apispec.yml
@@ -4,7 +4,7 @@ info:
   description: API Documentation for CosplayRent
   version: '1.0'
 servers:
-  - url: https://localhost:8080/api
+  - url: https://localhost:8081/api
 paths:
   /login:
     post:
@@ -141,15 +141,13 @@ paths:
       requestBody:
         required: true
         content:
-          application/json:
+          multipart/form-data:
             schema:
               type: object
               properties:
                 name:
                   type: string
                 email:
-                  type: string
-                password:
                   type: string
                 address:
                   type: string
@@ -231,8 +229,10 @@ paths:
                         type: string
                       created_at:
                         type: string
+                      updated_at:
+                        type: string
 
-  /token/{token}:
+  /verifytoken:
     get:
       tags:
         - User
@@ -241,7 +241,7 @@ paths:
 
       parameters:
         - name: token
-          in: path
+          in: header
           description: You need to add parameter to the url to be able to post
           required: true
           schema:
@@ -305,13 +305,23 @@ paths:
                         type: string
                       description:
                         type: string
+                      bahan:
+                        type: string
+                      ukuran:
+                        type: string
+                      berat:
+                        type: string
+                      kategori:
+                        type: string
                       price:
                         type: integer
-                      picture:
+                      costume_picture:
                         type: string
                       available:
                         type: boolean
                       created_at:
+                        type: string
+                      updated_at:
                         type: string
 
     post:
@@ -323,7 +333,7 @@ paths:
       requestBody:
         required: true
         content:
-          application/json:
+          multipart/form-data:
             schema:
               type: object
               properties:
@@ -333,12 +343,18 @@ paths:
                   type: string
                 description:
                   type: string
+                bahan:
+                  type: string
+                ukuran:
+                  type: string
+                berat:
+                  type: string
+                kategori:
+                  type: string
                 price:
                   type: integer
-                picture:
+                costume_picture:
                   type: string
-                available:
-                  type: boolean
 
       responses:
         '200':
@@ -393,11 +409,13 @@ paths:
                         type: string
                       price:
                         type: integer
-                      picture:
+                      costume_picture:
                         type: string
                       available:
                         type: boolean
                       created_at:
+                        type: string
+                      updated_at:
                         type: string
 
     put:
@@ -417,7 +435,7 @@ paths:
       requestBody:
         required: true
         content:
-          application/json:
+          multipart/form-data:
             schema:
               type: object
               properties:
@@ -427,7 +445,7 @@ paths:
                   type: string
                 price:
                   type: integer
-                picture:
+                costume_picture:
                   type: string
                 available:
                   type: boolean
@@ -472,6 +490,42 @@ paths:
                   status:
                     type: string
 
+  /review:
+    post:
+      tags:
+        - Review
+      description: Create a review by costume id
+      summary: Create a review by costume id
+
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                user_id:
+                  type: string
+                costume_id:
+                  type: string
+                description:
+                  type: string
+                rating:
+                  type: integer
+
+      responses:
+        '200':
+          description: Success to delete costume
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: number
+                  status:
+                    type: string
+
   /review/{costume_id}:
     get:
       tags:
@@ -502,59 +556,16 @@ paths:
                   data:
                     type: object
                     properties:
-                      id:
-                        type: integer
-                      user_id:
+                      name:
                         type: string
-                      costume_id:
-                        type: integer
+                      profile_picture:
+                        type: string
                       description:
                         type: string
                       rating:
                         type: integer
                       created_at:
                         type: string
-
-    post:
-      tags:
-        - Review
-      description: Create a review by costume id
-      summary: Create a review by costume id
-
-      parameters:
-        - name: costume_id
-          in: path
-          description: You need to add parameter to the url to be able to post
-          required: true
-          schema:
-            type: integer
-
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                user_id:
-                  type: string
-                description:
-                  type: string
-                rating:
-                  type: integer
-
-      responses:
-        '200':
-          description: Success to delete costume
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  code:
-                    type: number
-                  status:
-                    type: string
 
   /review/{review_id}:
     put:
@@ -998,6 +1009,8 @@ paths:
                         type: integer
                       status_payment:
                         type: boolean
+                      created_at:
+                        type: string
 
     post:
       tags:
@@ -1072,6 +1085,10 @@ paths:
                         type: integer
                       status_payment:
                         type: boolean
+                      is_cancelled:
+                        type: boolean
+                      created_at:
+                        type: string
 
     put:
       tags:
@@ -1099,6 +1116,8 @@ paths:
                 total:
                   type: integer
                 status_payment:
+                  type: boolean
+                is_cancelled:
                   type: boolean
 
       responses:
@@ -1140,6 +1159,35 @@ paths:
                     type: number
                   status:
                     type: string
+
+  /cancelorder/{order_id}:
+    put:
+      tags:
+        - Order
+      description: Update order data by order uuid to cancel order
+      summary: Update order data by order uuid to cancel order
+
+      parameters:
+        - name: order_id
+          in: path
+          description: You need to add parameter to the url to be able to put
+          required: true
+          schema:
+            type: string
+
+      responses:
+        '200':
+          description: Success to update order data
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: number
+                  status:
+                    type: string
+
 
   /order/{user_id}:
     get:
