# model/domain/costume.go
@@ -7,6 +7,10 @@ type Costume struct {
 	User_id     string
 	Name        string
 	Description string
+	Bahan       string
+	Ukuran      string
+	Berat       string
+	Kategori    string
 	Price       float64
 	Picture     string
 	Available   bool
